Fix z-index

--- a/packages/mdc-dialog/mdc-dialog.scss
+++ b/packages/mdc-dialog/mdc-dialog.scss
@@ -39,7 +39,7 @@ $mdc-dialog-dark-theme-bg-color: #303030 !default;
   width: 100%;
   height: 100%;
   visibility: hidden;
-  z-index: 2;
+  z-index: 5;
 
   &__backdrop {
     position: fixed;
